# MatrixForge

./: CMakeLists.txt  README.md  main.cpp
include/: Event.h  MatrixClient.h  Room.h  User.h
src/: MatrixClient.cpp
tests/: CMakeLists.txt  MatrixClientTest.cpp
